Kubernetes Project/mysql_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db-deploy
  namespace: project
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:8.0.32
        name: mysql-pod
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: "/data"
          name: mysql-volume
      volumes:
      - name: mysql-volume
        persistentVolumeClaim:
          claimName: mysql-pvc
