Kubernetes Project/python_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-webapp-deploy
  namespace: project
  labels:
    app: webapp
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
      tier: frontend
  template:
    metadata:
      labels:
        app: webapp
        tier: frontend
    spec:
      containers:
      - name: python-pod
        image: gxg513/telacad-python-k8s:v1
