Kubernetes Project/nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: python-nodeport
  namespace: project
spec:
  selector:
    app: webapp
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 9999
    targetPort: 9999
    nodePort: 30000
  type: NodePort
