Kubernetes Project/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
  namespace: project
spec:
  rules:
  - host: kubernetes-project.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-nodeport
            port:
              number: 9999
